--- a/projet/presentation.html
+++ b/projet/presentation.html
@@ -332,9 +332,7 @@
 </section>
 <section id="introduction" class="slide level2" data-background-image="backg.jpg">
 <h2><span style="color:black;">Introduction</span></h2>
-</section>
-<section id="objectifs" class="slide level2" data-background-image="backg.jpg">
-<h2><span style="color:black;">Objectifs</span></h2>
+<p><img data-src="figure_10.png"> ## <span style="color:black;">Objectifs</span>{background-image=backg.jpg}</p>
 </section>
 <section id="méthodologie" class="slide level2" data-background-image="backg.jpg">
 <h2><span style="color:black;">Méthodologie</span></h2>
